# app_template

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis_options.yaml  build.rs  pubspec.yaml
lib/: main.dart
src/: main.rs
