[package]
name = "app_template"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = "0.1.9"

[dependencies]
nativeshell = "0.1.9"
env_logger = "0.9.0"
